--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,29 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+/* My Styles */
+
+body {
+    background-color: LightGray;
+}
+
+div {
+    border: 1px solid Chocolate;
+}
+
+/* Navigation Section */
+.top-navigation {
+    background-color: #fff;
+}
+
+.top-navigation > .content {
+    width: 970px;
+    height: 70px;
+    margin 0 auto;
+}
+
+.logo {
+    margin-left: 14px;
+    height: 70px;
+}
