--- a/css/style.css
+++ b/css/style.css
@@ -151,3 +151,33 @@ body {
     border-color: #d9400e;
     cursor: pointer;
 }
+
+/* Cases */
+.cases {
+    background-color: #fff;
+    padding-bottom: 5rem;
+}
+
+.cases .content {
+    margin-top: 7.875rem;
+    color: #1d1e21;
+    text-align: center;
+}
+
+.cases h2 {
+    font-size: 2.75rem;
+    margin: 1.625rem 0 3.125rem;
+    font-weight: 300;
+
+}
+
+.cases h3 {
+    font-weight: 400;
+    font-size: 1.563rem;
+    margin: 2.5rem 0 1.875rem;
+}
+
+.cases .devices > li{
+    display: inline-block;
+    width: 33%;
+}
