--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,16 @@ body {
     margin-right: .5rem;
 }
 
+.social hr {
+    border: 0;
+    border-top: 1px solid #eaebec;
+    margin: 1.1313rem 0;
+}
+
+.social h5 {
+    margin-top: 1rem;
+}
+
 .social p {
     margin-top: 1rem;
     color: #838994;
